--- a/apps/site/src/components/common/dividers/DividerArrowDown.astro
+++ b/apps/site/src/components/common/dividers/DividerArrowDown.astro
@@ -1,23 +1,19 @@
 ---
 export interface Props {
-	[props: string]: any;
+    [props: string]: any;
 }
 
 const { ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-	<div class="relative top-0">
-		<svg
-			class="mx-auto left-0 right-0"
-			xmlns="http://www.w3.org/2000/svg"
-			xmlns:xlink="http://www.w3.org/1999/xlink"
-			width="100px"
-			height="40px"
-			viewBox="0 0 100 40"
-			xml:space="preserve"
-		>
-			<polygon points="50,20 0,0 100,0"></polygon>
-		</svg>
-	</div>
+    <svg
+        fill='currentColor'
+        xmlns='http://www.w3.org/2000/svg'
+        width='100px'
+        height='40px'
+        viewBox='0 0 100 40'
+    >
+        <polygon points='50,20 0,0 100,0'></polygon>
+    </svg>
 </div>
