--- a/apps/site/src/components/widgets/Hero.astro
+++ b/apps/site/src/components/widgets/Hero.astro
@@ -1,40 +1,27 @@
 ---
+import heroImageMobile from '/public/images/hero_sm.png';
+import heroImageDesktop from '/public/images/hero_md.png';
 import DividerWave from '@common/dividers/DividerWave.astro';
 
-import { SITE } from '@config.js';
+export interface Props {
+    className?: string;
+}
 
+const { ...props } = Astro.props as Props;
 ---
 
 <section>
-	<div class="flex flex-col relative h-screen">
-		<DividerWave class="absolute w-full h-screen bottom-0 spacewiz__fill--reversed" />
-
-		<main class="absolute flex flex-col self-center spacewiz__container h-screen justify-start md:justify-center">
-			<div
-				class="w-full md:w-1/3 mt-8 p-8 top-0 rounded-lg text-white text-shadow-sm shadow-black bg-sw-primary/80"
-			>
-				<h1 class="font-bold">Sua história, <br /> nossa magia</h1>
-				<p class="mt-8">{SITE.description}</p>
-			</div>
-		</main>
-
-		<img
-			width="1080"
-			height="100vh"
-			class="block md:hidden w-screen h-screen object-cover"
-			src="/images/hero_sm.webp"
-			alt="Banner da nossa mascote no espaço, vestindo seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas e sorrindo."
-		/>
-		<img
-			width="1920"
-			height="100vh"
-			class="hidden md:block w-screen h-screen top-0 object-cover"
-			src="/images/hero_md.webp"
-			alt="Banner da nossa mascote no espaço, vestindo seu traje de astronauta e usando um grande chapéu de mago. Ela está olhando para as estrelas e sorrindo."
-		/>
-	</div>
-
-	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
-	<!-- <HeroCanvas client:idle/> -->
-	<!-- </figure> -->
+    <div class='flex flex-col relative w-full h-screen overflow-hidden'>
+        <picture>
+            <source media='(max-width: 767px)' srcset={heroImageMobile.src} />
+            <source media='(min-width: 768px)' srcset={heroImageDesktop.src} />
+            <img
+                src={heroImageDesktop.src}
+                alt='Banner da nossa mascote no espaço.'
+                class='w-screen h-screen object-cover'
+                loading='eager'
+            />
+        </picture>
+        <DividerWave class='absolute w-full bottom-0 text-surface' />
+    </div>
 </section>
