--- a/apps/site/src/pages/privacy.astro
+++ b/apps/site/src/pages/privacy.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
-import { components } from '@widgets/policies/components/Components.astro';
 import PrivacyContent from '@collections/policies/privacy.md';
 ---
 
 <Layout>
-	<PrivacyContent components={components} />
+	<PrivacyContent />
 </Layout>
