--- a/apps/site/src/pages/terms.astro
+++ b/apps/site/src/pages/terms.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '@layouts/PoliciesPageLayout.astro';
-import { components } from '@widgets/policies/components/Components.astro';
 import TermsContent from '@content/policies/terms.md';
 ---
 
 <Layout>
-	<TermsContent components={components} />
+    <TermsContent />
 </Layout>
