--- a/apps/site/src/layouts/BaseLayout.astro
+++ b/apps/site/src/layouts/BaseLayout.astro
@@ -6,12 +6,8 @@
 
 import MetaTags from '@common/MetaTags.astro';
 
-import Header from '@widgets/Header.astro';
-import Footer from '@widgets/Footer.astro';
-import Scripts from '@common/Scripts.astro';
-
 import type { MetaSEO } from 'types/metaseo';
-import { SITE } from '@config.js';
+import { config } from '@config.js';
 
 import '@styles/theme.css';
 
@@ -29,23 +25,10 @@ const { meta } = Astro.props as Props;
     </head>
 
     <body class='flex flex-col w-full min-h-dvh'>
-        <!-- Google Tag Manager (noscript) -->
-        <!-- <noscript
-			><iframe
-				src={"https://www.googletagmanager.com/ns.html?id=" + SITE.googleTagId}
-				height="0"
-				width="0"
-				style="display:none;visibility:hidden"></iframe>
-		</noscript> -->
-        <!-- End Google Tag Manager (noscript) -->
 
-        <Header />
-
-        <main class='flex flex-1 flex-col w-full h-full bg-surface'>
+        <main class='flex flex-col w-full h-full bg-surface'>
             <slot />
         </main>
 
-        <Footer />
-        <Scripts />
     </body>
 </html>
