--- a/apps/site/src/pages/404.astro
+++ b/apps/site/src/pages/404.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '@layouts/BaseLayout.astro';
-import { SITE } from '@config.js';
+import { config } from '@config.js';
 import Error404 from '@widgets/Error404.astro';
-const title = `Error 404 — ${SITE.name}`;
+const title = `Error 404 — ${config.name}`;
 ---
 
 <Layout meta={{ title }}>
