--- a/apps/site/src/pages/projects/[category].astro
+++ b/apps/site/src/pages/projects/[category].astro
@@ -1,8 +1,7 @@
 ---
 import Layout from '@layouts/PageLayout.astro'
-import { getSlugFromURL } from '@common/Path'
 
-import { SITE } from '@config.js'
+import { config } from '@config.js'
 import type { MetaSEO } from 'types/metaseo'
 
 // export async function getStaticPaths() {
