--- a/apps/site/src/pages/projects/index.astro
+++ b/apps/site/src/pages/projects/index.astro
@@ -2,7 +2,7 @@
 import Layout from '@layouts/PageLayout.astro'
 // import { getSlugFromURL } from '@common/Path'
 
-// import { SITE } from '@config.js';
+// import { config } from '@config.js';
 // import type { MetaSEO } from 'types/metaseo';
 
 // async function getProjects() {
