Refactor ProductCard components and update styles

--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -3,7 +3,7 @@ import DividerArrowDown from '@common/dividers/DividerArrowDown.astro';
 ---
 
 <footer
-    class='flex flex-col w-full text-sm items-center bg-surface-dim text-on-surface shadow-2xl relative'
+    class='flex flex-col w-full mt-8 pt-8 text-sm items-center bg-surface-dim text-on-surface shadow-2xl relative'
     style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
 >
     <div class='flex flex-row container justify-between mt-4'>
@@ -35,8 +35,8 @@ import DividerArrowDown from '@common/dividers/DividerArrowDown.astro';
             </ul>
         </div>
     </div>
-    <div class='flex flex-col w-full items-center'>
-        <div class='container text-center bg-sw-neutral-950'>
+    <div class='flex flex-col w-full py-8 mt-8 items-center bg-inverse-surface text-inverse-on-surface'>
+        <div class='container text-center'>
             <p>© Space Wizard Studios - Todos os direitos reservados</p>
         </div>
     </div>
