--- a/apps/site/src/components/widgets/Header.astro
+++ b/apps/site/src/components/widgets/Header.astro
@@ -4,7 +4,7 @@ import { SiteLogo } from '@assets/icons/SiteLogo';
 ---
 
 <header
-    class='flex flex-col sticky w-full top-0 z-50 items-center justify-center bg-surface-bright text-on-surface shadow-2xl'
+    class='flex flex-col sticky w-full top-0 py-4 z-50 items-center justify-center bg-surface-bright text-brand shadow-2xl'
 >
     <nav class='sw-container flex flex-row justify-between items-center'>
         <a class='w-48 hover:scale-105 transition-all' href='/' title='Space Wizard Studios'>
