--- a/apps/site/src/assets/styles/theme.css
+++ b/apps/site/src/assets/styles/theme.css
@@ -5,158 +5,256 @@ This palette was studied with the help of tints.dev
 */
 @theme {
     /* PRIMARY */
-    --sw-navy: #005ce6;
-    --sw-navy-50: #dbeaff;
-    --sw-navy-100: #bdd7ff;
-    --sw-navy-200: #8ab9ff;
-    --sw-navy-300: #5297ff;
-    --sw-navy-400: #1f78ff;
-    --sw-navy-500: #005ce6;
-    --sw-navy-600: #0049b8;
-    --sw-navy-700: #00398f;
-    --sw-navy-800: #002761;
-    --sw-navy-900: #001638;
-    --sw-navy-950: #000c1f;
+    --color-sw-navy: #005ce6;
+    --color-sw-navy-50: #dbeaff;
+    --color-sw-navy-100: #bdd7ff;
+    --color-sw-navy-200: #8ab9ff;
+    --color-sw-navy-300: #5297ff;
+    --color-sw-navy-400: #1f78ff;
+    --color-sw-navy-500: #005ce6;
+    --color-sw-navy-600: #0049b8;
+    --color-sw-navy-700: #00398f;
+    --color-sw-navy-800: #002761;
+    --color-sw-navy-900: #001638;
+    --color-sw-navy-950: #000c1f;
 
-    --sw-flamingo: #ff62f2;
-    --sw-flamingo-50: #ffe5f9;
-    --sw-flamingo-100: #ffd6f6;
-    --sw-flamingo-200: #ffb8f2;
-    --sw-flamingo-300: #ff9ef0;
-    --sw-flamingo-400: #ff80f0;
-    --sw-flamingo-500: #ff62f2;
-    --sw-flamingo-600: #ff1fe5;
-    --sw-flamingo-700: #d600b6;
-    --sw-flamingo-800: #940079;
-    --sw-flamingo-900: #4d003c;
-    --sw-flamingo-950: #2e0022;
+    --color-sw-flamingo: #ff62f2;
+    --color-sw-flamingo-50: #ffe5f9;
+    --color-sw-flamingo-100: #ffd6f6;
+    --color-sw-flamingo-200: #ffb8f2;
+    --color-sw-flamingo-300: #ff9ef0;
+    --color-sw-flamingo-400: #ff80f0;
+    --color-sw-flamingo-500: #ff62f2;
+    --color-sw-flamingo-600: #ff1fe5;
+    --color-sw-flamingo-700: #d600b6;
+    --color-sw-flamingo-800: #940079;
+    --color-sw-flamingo-900: #4d003c;
+    --color-sw-flamingo-950: #2e0022;
 
-    /* DARK */
-    --sw-azure: #5e6ea8;
-    --sw-azure-50: #e8eaf2;
-    --sw-azure-100: #dbdeeb;
-    --sw-azure-200: #b9c0d9;
-    --sw-azure-300: #9ca6c9;
-    --sw-azure-400: #7e8bb9;
-    --sw-azure-500: #5e6ea8;
-    --sw-azure-600: #4b598b;
-    --sw-azure-700: #39446a;
-    --sw-azure-800: #272f49;
-    --sw-azure-900: #151928;
-    --sw-azure-950: #0d0f17;
+    /* SECONDARY */
+    --color-sw-azure: #5e6ea8;
+    --color-sw-azure-50: #e8eaf2;
+    --color-sw-azure-100: #dbdeeb;
+    --color-sw-azure-200: #b9c0d9;
+    --color-sw-azure-300: #9ca6c9;
+    --color-sw-azure-400: #7e8bb9;
+    --color-sw-azure-500: #5e6ea8;
+    --color-sw-azure-600: #4b598b;
+    --color-sw-azure-700: #39446a;
+    --color-sw-azure-800: #272f49;
+    --color-sw-azure-900: #151928;
+    --color-sw-azure-950: #0d0f17;
 
-    --sw-plum: #c75da7;
-    --sw-plum-50: #f7e8f3;
-    --sw-plum-100: #f2d9ea;
-    --sw-plum-200: #e7bbda;
-    --sw-plum-300: #dd9cca;
-    --sw-plum-400: #d17ab7;
-    --sw-plum-500: #c75da7;
-    --sw-plum-600: #ae3c8c;
-    --sw-plum-700: #852e6b;
-    --sw-plum-800: #5b1f49;
-    --sw-plum-900: #311128;
-    --sw-plum-950: #1e0a18;
+    --color-sw-plum: #c75da7;
+    --color-sw-plum-50: #f7e8f3;
+    --color-sw-plum-100: #f2d9ea;
+    --color-sw-plum-200: #e7bbda;
+    --color-sw-plum-300: #dd9cca;
+    --color-sw-plum-400: #d17ab7;
+    --color-sw-plum-500: #c75da7;
+    --color-sw-plum-600: #ae3c8c;
+    --color-sw-plum-700: #852e6b;
+    --color-sw-plum-800: #5b1f49;
+    --color-sw-plum-900: #311128;
+    --color-sw-plum-950: #1e0a18;
 
     /* ACCENT */
-    --sw-curious: #2e96ca;
-    --sw-curious-50: #e2f1f8;
-    --sw-curious-100: #cde7f4;
-    --sw-curious-200: #a4d3ea;
-    --sw-curious-300: #7abfe1;
-    --sw-curious-400: #51aad7;
-    --sw-curious-500: #2e96ca;
-    --sw-curious-600: #2578a2;
-    --sw-curious-700: #1c5d7d;
-    --sw-curious-800: #144157;
-    --sw-curious-900: #0a222e;
-    --sw-curious-950: #07161d;
+    --color-sw-curious: #2e96ca;
+    --color-sw-curious-50: #e2f1f8;
+    --color-sw-curious-100: #cde7f4;
+    --color-sw-curious-200: #a4d3ea;
+    --color-sw-curious-300: #7abfe1;
+    --color-sw-curious-400: #51aad7;
+    --color-sw-curious-500: #2e96ca;
+    --color-sw-curious-600: #2578a2;
+    --color-sw-curious-700: #1c5d7d;
+    --color-sw-curious-800: #144157;
+    --color-sw-curious-900: #0a222e;
+    --color-sw-curious-950: #07161d;
 
-    --sw-pinkish: #ff055f;
-    --sw-pinkish-50: #ffdbdf;
-    --sw-pinkish-100: #ffc7d0;
-    --sw-pinkish-200: #ff94ab;
-    --sw-pinkish-300: #ff668f;
-    --sw-pinkish-400: #ff3374;
-    --sw-pinkish-500: #ff055f;
-    --sw-pinkish-600: #d10042;
-    --sw-pinkish-700: #9e002a;
-    --sw-pinkish-800: #700018;
-    --sw-pinkish-900: #3d000a;
-    --sw-pinkish-950: #240004;
+    --color-sw-pinkish: #ff055f;
+    --color-sw-pinkish-50: #ffdbdf;
+    --color-sw-pinkish-100: #ffc7d0;
+    --color-sw-pinkish-200: #ff94ab;
+    --color-sw-pinkish-300: #ff668f;
+    --color-sw-pinkish-400: #ff3374;
+    --color-sw-pinkish-500: #ff055f;
+    --color-sw-pinkish-600: #d10042;
+    --color-sw-pinkish-700: #9e002a;
+    --color-sw-pinkish-800: #700018;
+    --color-sw-pinkish-900: #3d000a;
+    --color-sw-pinkish-950: #240004;
 
     /* SURFACE */
-    --sw-neutral: #e1e1e1;
-    --sw-neutral-50: #fcfcfc;
-    --sw-neutral-100: #fafafa;
-    --sw-neutral-200: #f2f2f2;
-    --sw-neutral-300: #ededed;
-    --sw-neutral-400: #e8e8e8;
-    --sw-neutral-500: #e1e1e1;
-    --sw-neutral-600: #b5b5b5;
-    --sw-neutral-700: #878787;
-    --sw-neutral-800: #595959;
-    --sw-neutral-900: #2e2e2e;
-    --sw-neutral-950: #171717;
+    --color-sw-neutral: #e1e1e1;
+    --color-sw-neutral-50: #fcfcfc;
+    --color-sw-neutral-100: #fafafa;
+    --color-sw-neutral-200: #f2f2f2;
+    --color-sw-neutral-300: #ededed;
+    --color-sw-neutral-400: #e8e8e8;
+    --color-sw-neutral-500: #e1e1e1;
+    --color-sw-neutral-600: #b5b5b5;
+    --color-sw-neutral-700: #878787;
+    --color-sw-neutral-800: #595959;
+    --color-sw-neutral-900: #2e2e2e;
+    --color-sw-neutral-950: #171717;
 
-    --sw-purply: #6d4aa6;
-    --sw-purply-50: #d4cbd7;
-    --sw-purply-100: #cabdd1;
-    --sw-purply-200: #b8a3c7;
-    --sw-purply-300: #a285bc;
-    --sw-purply-400: #8865b4;
-    --sw-purply-500: #6d4aa6;
-    --sw-purply-600: #563b91;
-    --sw-purply-700: #3f2c77;
-    --sw-purply-800: #2a1f5b;
-    --sw-purply-900: #18133e;
-    --sw-purply-950: #100e32;
+    --color-sw-purply: #6d4aa6;
+    --color-sw-purply-50: #d4cbd7;
+    --color-sw-purply-100: #cabdd1;
+    --color-sw-purply-200: #b8a3c7;
+    --color-sw-purply-300: #a285bc;
+    --color-sw-purply-400: #8865b4;
+    --color-sw-purply-500: #6d4aa6;
+    --color-sw-purply-600: #563b91;
+    --color-sw-purply-700: #3f2c77;
+    --color-sw-purply-800: #2a1f5b;
+    --color-sw-purply-900: #18133e;
+    --color-sw-purply-950: #100e32;
 
     /* DESIGN TOKENS */
-    --color-surface-dim: var(--sw-neutral-400);
-    --color-surface: var(--sw-neutral-200);
-    --color-surface-bright: var(--sw-neutral-100);
-    --color-on-surface: var(--sw-neutral-950);
+    --color-brand: var(--color-sw-navy-800);
 
-    --color-primary: var(--sw-navy-400);
-    --color-on-primary: var(--sw-navy-50);
-    --color-primary-container: var(--sw-navy-100);
-    --color-on-primary-container: var(--sw-navy-900);
+    --color-surface-dim: var(--color-sw-neutral-400);
+    --color-surface: var(--color-sw-neutral-200);
+    --color-surface-bright: var(--color-sw-neutral-100);
+    --color-on-surface: var(--color-sw-navy-800);
+    --color-on-surface-variant: var(--color-sw-navy-900);
 
-    --color-secondary: var(--sw-azure-200);
-    --color-on-secondary: var(--sw-azure-950);
-    --color-secondary-container: var(--sw-azure-100);
-    --color-on-secondary-container: var(--sw-azure-900);
+    --color-inverse-surface: var(--color-sw-navy-950);
+    --color-inverse-on-surface: var(--color-sw-navy-200);
 
-    --color-accent: var(--sw-curious-300);
-    --color-on-accent: var(--sw-curious-950);
-    --color-accent-container: var(--sw-curious-200);
-    --color-on-accent-container: var(--sw-curious-900);
+    --color-surface-container-lowest: var(--color-sw-neutral-100);
+    --color-surface-container-low: var(--color-sw-neutral-300);
+    --color-surface-container: var(--color-sw-neutral-500);
+    --color-surface-container-high: var(--color-sw-neutral-600);
+    --color-surface-container-highest: var(--color-sw-neutral-700);
+
+    --color-primary: var(--color-sw-navy);
+    --color-on-primary: var(--color-sw-navy-50);
+    --color-primary-container: var(--color-sw-navy-100);
+    --color-on-primary-container: var(--color-sw-navy-900);
+
+    --color-inverse-primary: var(--color-sw-navy-50);
+    --color-inverse-on-primary: var(--color-sw-navy-400);
+
+    --color-secondary: var(--color-sw-azure-200);
+    --color-on-secondary: var(--color-sw-azure-950);
+    --color-secondary-container: var(--color-sw-azure-100);
+    --color-on-secondary-container: var(--color-sw-azure-900);
+
+    --color-inverse-secondary: var(--color-sw-azure-950);
+    --color-inverse-on-secondary: var(--color-sw-azure-200);
+
+    --color-accent: var(--color-sw-curious-300);
+    --color-on-accent: var(--color-sw-curious-950);
+    --color-accent-container: var(--color-sw-curious-200);
+    --color-on-accent-container: var(--color-sw-curious-900);
+
+    --color-inverse-accent: var(--color-sw-curious-950);
+    --color-inverse-on-accent: var(--color-sw-curious-200);
 }
 
 .dark {
     /* DESIGN TOKENS - DARK */
-    --color-surface-dim: var(--sw-purply-950);
-    --color-surface: var(--sw-purply-800);
-    --color-surface-bright: var(--sw-purply-700);
-    --color-on-surface: var(--sw-neutral-50);
+    --color-brand: var(--color-sw-neutral-50);
 
-    --color-primary: var(--sw-flamingo-200);
-    --color-on-primary: var(--sw-flamingo-950);
-    --color-primary-container: var(--sw-flamingo-100);
-    --color-on-primary-container: var(--sw-flamingo-900);
+    --color-surface-dim: var(--color-sw-purply-950);
+    --color-surface: var(--color-sw-purply-900);
+    --color-surface-bright: var(--color-sw-purply-800);
+    --color-on-surface: var(--color-sw-purply-50);
+    --color-on-surface-variant: var(--color-sw-purply-500);
 
-    --color-secondary: var(--sw-plum-300);
+    --color-inverse-surface: var(--color-sw-purply-50);
+    --color-inverse-on-surface: var(--color-sw-purply-900);
+
+    --color-surface-container-lowest: var(--color-sw-purply-950);
+    --color-surface-container-low: var(--color-sw-purply-900);
+    --color-surface-container: var(--color-sw-purply-800);
+    --color-surface-container-high: var(--color-sw-purply-700);
+    --color-surface-container-highest: var(--color-sw-purply-600);
+
+    --color-primary: var(--color-sw-flamingo-200);
+    --color-on-primary: var(--color-sw-flamingo-950);
+    --color-primary-container: var(--color-sw-flamingo-100);
+    --color-on-primary-container: var(--color-sw-flamingo-900);
+
+    --color-inverse-primary: var(--color-sw-flamingo-950);
+    --color-inverse-on-primary: var(--color-sw-flamingo-200);
+
+    --color-secondary: var(--color-sw-plum-300);
     --color-on-secondary: var(--sw-plum-950);
-    --color-secondary-container: var(--sw-plum-200);
-    --color-on-secondary-container: var(--sw-plum-900);
+    --color-secondary-container: var(--color-sw-plum-200);
+    --color-on-secondary-container: var(--color-sw-plum-900);
 
-    --color-accent: var(--sw-pinkish-300);
-    --color-on-accent: var(--sw-pinkish-950);
-    --color-accent-container: var(--sw-pinkish-200);
-    --color-on-accent-container: var(--sw-pinkish-900);
+    --color-inverse-secondary: var(--color-sw-plum-950);
+    --color-inverse-on-secondary: var(--color-sw-plum-200);
+
+    --color-accent: var(--color-sw-pinkish-300);
+    --color-on-accent: var(--color-sw-pinkish-950);
+    --color-accent-container: var(--color-sw-pinkish-200);
+    --color-on-accent-container: var(--color-sw-pinkish-900);
+
+    --color-inverse-accent: var(--color-sw-pinkish-950);
+    --color-inverse-on-accent: var(--color-sw-pinkish-200);
 }
 
 .sw-container {
     @apply flex w-full max-w-6xl;
+}
+
+.display {
+    @apply text-9xl font-black;
+}
+
+h1 {
+    @apply text-5xl font-extrabold;
+}
+
+h2 {
+    @apply text-4xl font-bold;
+}
+
+h3 {
+    @apply text-xl font-semibold;
+}
+
+h4 {
+    @apply text-lg font-bold;
+}
+
+h5 {
+    @apply text-base font-bold;
+}
+
+h6 {
+    @apply text-base font-bold;
+}
+
+p {
+    a {
+        @apply transition-colors duration-500;
+
+        &:hover {
+            @apply transition-colors duration-500;
+        }
+    }
+}
+
+.sw-text-gradient {
+    @apply rounded-4xl bg-gradient-to-b bg-clip-text font-black text-transparent;
+    background-size: 100% 200%;
+    background-position-y: 100%;
+    animation: sw-pulse 4s ease-in-out infinite;
+}
+
+@keyframes sw-pulse {
+    0%,
+    100% {
+        background-position-y: 0%;
+    }
+
+    50% {
+        background-position-y: 50%;
+    }
 }
