--- a/apps/site/src/components/widgets/About.astro
+++ b/apps/site/src/components/widgets/About.astro
@@ -7,28 +7,15 @@ const { ...props } = Astro.props as Props;
 ---
 
 <div {...props}>
-    <header>
-        <h2 class='text-4xl font-black uppercase'>
-            <span>Sobre nós</span>
-        </h2>
-        <h3 class='mb-12'>
-            <span class='text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo'
-                >Encantamos com tecnologia ❤</span
-            >
-        </h3>
-    </header>
-
-    <section class='grid grid-cols-1 md:grid-cols-2 gap-8'>
-        <div
-            class='flex flex-row flex-wrap shadow-lg p-6 relative overflow-visible rounded-2xl bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800'
-        >
+    <section class='grid grid-cols-1 md:grid-cols-2 text-on-surface'>
+        <div class='flex flex-col'>
             <h4>Um pouquinho sobre a spacewiz:</h4>
-            <ul class='list-disc px-8'>
-                <li class='pb-4'>
+            <ul class='list-disc'>
+                <li>
                     Somos uma <span class='font-black text-sw-navy dark:text-sw-flamingo'>empresa multifacetada</span> e
                     trabalhamos com a produção de diversos conteúdos audiovisuais.
                 </li>
-                <li class='pb-4'>
+                <li>
                     Criamos experiências e buscamos encantar com sorrisos através da <span
                         class='font-black text-sw-navy dark:text-sw-flamingo'>imersão e interatividade</span
                     >.
@@ -40,7 +27,7 @@ const { ...props } = Astro.props as Props;
                 </li>
             </ul>
         </div>
-        <figure class='flex justify-center items-center'>
+        <!-- <figure class='flex justify-center items-center'>
             <svg class='h-64' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024'>
                 <path
                     class='spacewiz__fill'
@@ -52,6 +39,6 @@ const { ...props } = Astro.props as Props;
                     d='M276.96,294.8l18.55-50.43s17.53,17.2,23.84,14.29c11.5-5.3,16.08-31.46,16.08-31.46,0,0,23.18-7.43,26.95-21.35,2.45-9.06-23.87-24.37-23.87-24.37,0,0-1.96-27.45-10.62-32.28-10.7-5.98-32.65,14.83-32.65,14.83,0,0-25.53-6.91-33.98,1.45-8.01,7.91,4.74,32.98,4.74,32.98,0,0-14.26,27.03-9.51,34.96,4.32,7.22,24.07,6.14,24.07,6.14l-20.59,50.8-23.06,57.65s-11.47,21.01-10.2,27.86c.57,3.1,10.2,6.67,13.3,6.09,7.37-1.39,13.48-25.75,13.48-25.75l23.46-61.41Z'
                 ></path>
             </svg>
-        </figure>
+        </figure> -->
     </section>
 </div>
