updating product card

--- a/apps/site/src/components/widgets/Products.astro
+++ b/apps/site/src/components/widgets/Products.astro
@@ -1,6 +1,6 @@
 ---
-import ProductCard from '@common/ProductCard';
-import { Products as ProductsReact } from '@components/common/ProductCard/Products';
+import FlashCard from '@common/ProductCard/FlashCard';
+import { Products as ProductsReact } from '@common/ProductCard/RocketCard/Products';
 import { cn } from '@helpers/cn';
 
 export interface Props {
