--- a/apps/site/src/components/widgets/Team.astro
+++ b/apps/site/src/components/widgets/Team.astro
@@ -1,6 +1,6 @@
 ---
 import TeamCard from '@common/TeamCard';
-import { Portfolio } from '@icons/card_button';
+import { Portfolio } from '@icons/ProductCardIcons';
 
 export interface Props {
 	[props: string]: any;
