--- a/apps/site/src/components/widgets/Header.astro
+++ b/apps/site/src/components/widgets/Header.astro
@@ -1,6 +1,6 @@
 ---
 import ButtonToggleTheme from '@common/ButtonToggleTheme';
-import { SiteLogo } from '@assets/icons/SiteLogo';
+import { SiteLogo } from '@icons/SiteLogo';
 ---
 
 <header
