--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -25,12 +25,12 @@ const meta: MetaSEO = {
     <Hero />
     <div class='flex flex-col'>
         <section class='flex flex-col w-full relative'>
-            <div class='flex flex-col sw-container mx-auto space-y-8'>
+            <div class='flex flex-col sw-container mx-auto space-y-8 z-20'>
                 <header>
                     <h2 class='uppercase text-on-surface'>Nossos serviços</h2>
                     <h3 class='sw-text-gradient from-primary to-accent'>Um resumo do que desenvolvemos</h3>
                 </header>
-                <Products className='z-20'/>
+                <Products/>
             </div>
             <DividerTilt class='absolute bottom-0 w-full -rotate-180 fill-surface-dim' />
         </section>
