feat: update styles and animations for improved UI consistency and performance

--- a/apps/site/src/layouts/PageLayout.astro
+++ b/apps/site/src/layouts/PageLayout.astro
@@ -14,6 +14,8 @@ const { meta } = Astro.props as Props;
 
 <Layout meta={meta}>
     <Header />
-    <slot />
+    <div class="py-16">
+        <slot />
+    </div>
     <Footer />
 </Layout>
